billson + mobile compatibility adjustments

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,4 +6,12 @@
     .element {
       flex: 0 0 50%; 
     }
+    #secret{
+      position: relative;
   }
+  }
+
+  #secret{
+    position: absolute;
+    bottom: 5px;
+}
